# FontPreview

./: .astylerc  CMakeLists.txt  README.md  fontpreviewwidget.cpp  fontpreviewwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
